--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +23,56 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    
+    <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    <h1 class="text-2xl font-bold">This is SwiftCart</h1>
+    <header class="bg-base-100 shadow-sm">
+        <div class="navbar md:w-3/4 mx-auto">
+            <div class="navbar-start ">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="-1"
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box font-bold space-y-2 z-1 mt-3 w-52 p-2 shadow">
+                        <li>Home</li>
+                        <li>Products</li>
+                        <li>About</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <a class=" text-primary text-4xl font-bold">SwiftCart</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 space-x-4 font-bold">
+                    <li>Home</li>
+                    <li>Products</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="navbar-end">
+                <a class="text-primary text-xl"><i class="fa-solid fa-cart-shopping"></i></a>
+            </div>
+        </div>
+    </header>
+
+    <section class="banner ">
+        <div class="md:w-3/4 md:mx-auto mx-4 py-44 space-y-5 ">
+            <h1 class="text-4xl text-white font-bold">Best Collection For You</h1>
+            <p class="font-light text-lg space-x-1 text-white">Discover the latest trends in fasion, electronics and more. Shop with <br> confident and style at SwiftCart
+            </p>
+            <button class="btn btn-primary">Shop Now</button>
+        </div>
+    </section>
+
     <script src="./script/script.js"></script>
 </body>
+
 </html>
