why chose us - section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    
+
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -66,12 +66,52 @@
     <section class="banner ">
         <div class="md:w-3/4 md:mx-auto mx-4 py-44 space-y-5 ">
             <h1 class="text-4xl text-white font-bold">Best Collection For You</h1>
-            <p class="font-light text-lg space-x-1 text-white">Discover the latest trends in fasion, electronics and more. Shop with <br> confident and style at SwiftCart
+            <p class="font-light text-lg space-x-1 text-white">Discover the latest trends in fasion, electronics and
+                more. Shop with <br> confident and style at SwiftCart
             </p>
             <button class="btn btn-primary">Shop Now</button>
         </div>
     </section>
 
+    <section class="bg-gray-50 py-20">
+        <div class="md:w-3/4 md:mx-auto mx-4">
+            <div class="text-center space-y-5">
+                <h1 class="text-4xl font-bold">Why Chose Us</h1>
+                <p class="text-gray-500 font-light text-xl">We provide the best shopping experience with top-notch
+                    services</p>
+            </div>
+            <div class="grid md:grid-cols-4 gap-5 pt-16">
+                <div class="card  bg-base-100 card-md shadow-sm">
+                    <div class="card-body  space-y-2">
+                        <i class="fa-regular fa-truck text-4xl text-primary"></i>
+                        <h2 class="card-title">Fast Delivery</h2>
+                        <p>Get your orders delivered to your doorstep quickly and efficiently</p>
+                    </div>
+                </div>
+                <div class="card bg-base-100 card-md shadow-sm">
+                    <div class="card-body space-y-2">
+                        <i class="fa-regular fa-headphones text-4xl text-primary"></i>
+                        <h2 class="card-title">24/7 Support</h2>
+                        <p>Our support team is available around the clock to asist your</p>
+                    </div>
+                </div>
+                <div class="card  bg-base-100 card-md shadow-sm">
+                    <div class="card-body space-y-2">
+                        <i class="fa-solid fa-shield text-4xl text-primary"></i>
+                        <h2 class="card-title">Secure Payment</h2>
+                        <p>Experience safe and secure transactions with our encrypted payment system.</p>
+                    </div>
+                </div>
+                <div class="card  bg-base-100 card-md shadow-sm">
+                    <div class="card-body space-y-2">
+                       <i class="fa-solid fa-right-left text-4xl text-primary"></i>
+                        <h2 class="card-title">Easy Returns</h2>
+                        <p>Not satisfied? Return your products easily within 30 days.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="./script/script.js"></script>
 </body>
 
