--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <ul tabindex="-1"
                         class="menu menu-sm dropdown-content bg-base-100 rounded-box font-bold space-y-2 z-1 mt-3 w-52 p-2 shadow">
-                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./">Home</a></li>
                         <li><a href="./products.html">Products</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
@@ -51,7 +51,7 @@
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 space-x-4 font-bold">
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./">Home</a></li>
                     <li><a href="./products.html">Products</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
@@ -184,7 +184,21 @@
         </nav>
         </footer>
     </section>
+    <dialog id="product_modal" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+            <div id="details-container" class="space-y-5">
+
+            </div>
+            <div class="modal-action">
+                <form method="dialog">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Close</button>
+                </form>
+            </div>
+        </div>
+    </dialog>
     <script src="./script/script.js"></script>
+    <script src="./script/activepage.js"></script>
 </body>
 
 </html>
